# data-flow-s3-import

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  makefile  manage.py  pyproject.toml  setup.cfg  tox.ini
.github/workflow/: test.yml
.github/workflows/: test.yml
data_flow_s3_import/: ingest.py  types.py
data_flow_s3_import/tests/: settings.py  test_ingest.py  test_ingest_to_model.py
